<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dictorine</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="get_data">Click the button to get json!</string>
	<string name="click_me">Click me!</string>
	<string name="logout">Logout</string>
	<string name="app_id">211569935708471</string>
	<string name="login_fb">Login with Facebook</string>
	<string name="profilepic">Pic</string>
	<string name="question1">First Question</string>
	<string name="question2">Second Question</string>
	<string name="question3">Third Question</string>
	<string name="setQuestion">Set Question</string>
	
	
	
	<string name="submitQuestion">Submit</string>
	<string name="backButton">Back</string>
	<string name="choice4">Choice4</string>
	<string name="choice3">Choice3</string>
	<string name="choice2">Choice2</string>
	<string name="choice1">Choice1</string>
	<string name="questionLabel">Question:</string>
	<string name="questionHint">Write your question here...</string>
	<string name="choice1Hint">first choice...</string>
	<string name="choice2Hint">second choice...</string>
	<string name="choice3Hint">third choice...</string>
	<string name="choice4Hint">forth choice...</string>
	
	
	
	
</resources>
