<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="#E9EAED">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <TextView
            android:id="@+id/header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#E9EAED" />

        

        <TextView
            android:id="@+id/questionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/questionText"
            android:hint="@string/questionHint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:lines="5"
            android:inputType="textMultiLine"
            android:gravity="top|left" >
            
            
        </EditText>
        
        <TextView
            android:id="@+id/choice1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:layout_height="fill_parent"
	        >
	    
            <EditText
	            android:id="@+id/choice1"
	            android:layout_width="wrap_content"
	            android:hint="@string/choice1Hint"
	            android:layout_height="fill_parent"
	            android:background="@drawable/rounded_left"
	            android:ems="10"
	            android:inputType="textMultiLine"
	             >
            
        	</EditText>

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/rounded_rigt" />
            
   		</LinearLayout> 
   		
        <TextView
            android:id="@+id/choice2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice2"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:layout_height="fill_parent">
	    
            <EditText
	            android:id="@+id/choice2"
	            android:hint="@string/choice2Hint"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:ems="10"
	            android:background="@drawable/rounded_left"
	            android:inputType="textMultiLine" >
            
        	</EditText>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/rounded_rigt" />
            
   		</LinearLayout> 
   		        
         <TextView
            android:id="@+id/choice3Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice3"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:layout_height="fill_parent">
	    
            <EditText
	            android:id="@+id/choice3"
	            android:hint="@string/choice3Hint"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:background="@drawable/rounded_left"
	            android:ems="10"
	            android:inputType="textMultiLine" >
            
        	</EditText>

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/rounded_rigt" />
            
   		</LinearLayout> 
   		
        <TextView
            android:id="@+id/choice4Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice4"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:layout_height="fill_parent">
	    
            <EditText
	            android:id="@+id/choice4"
	            android:hint="@string/choice4Hint"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:background="@drawable/rounded_left"
	            android:ems="10"
	            android:inputType="textMultiLine" >
            
        	</EditText>

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/rounded_rigt" />
            
   		</LinearLayout> 
   		
        <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="horizontal"
	        android:layout_height="fill_parent">
            
            <Button
		        android:id="@+id/backButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/backButton"
		        android:onClick="backButton" />
   		
	        <Button
		        android:id="@+id/submitQuestion"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/submitQuestion"
		        android:onClick="submitButton"/>
	        
	        
	 	</LinearLayout>
 
    </LinearLayout>
</ScrollView>