<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserActivity" >
    
   

  <!--   <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_data" />-->

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:text="@string/click_me" 
        android:onClick="getData" /> 

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/profilePicture"
        android:text="@string/logout"
        android:onClick="logOut" />

    <Button
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePicture"
        android:layout_centerHorizontal="true"
        android:text="@string/question1" 
        android:onClick="questionSet"/>
    <Button
        android:id="@+id/question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question1"
        android:layout_centerHorizontal="true"
        android:text="@string/question2" 
        android:onClick="questionSet" />
     <Button
        android:id="@+id/question3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question2"
        android:layout_centerHorizontal="true"
        android:text="@string/question3"
        android:onClick="questionSet" />

     <com.facebook.widget.ProfilePictureView
         android:id="@+id/profilePicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button9"
         android:layout_alignTop="@+id/button9"
         app:is_cropped="true"
         app:preset_size="large" >
     </com.facebook.widget.ProfilePictureView>

</RelativeLayout>